# shelfloom

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 1b4a2e8ee126_add_unmatched_sessions_table.py  3c1d7f8a9b21_preserve_stubbed_serial_chapters.py  4593594f5da9_add_koreader_partial_md5_columns_to_.py  5e6775722915_initial_schema.py  6305b1bb905b_add_last_viewed_at_to_web_serials.py  7319bc64189e_add_lenses_table.py  92375bfac4f1_add_unique_constraint_books_shelf_id_.py  9bc272692737_add_created_at_to_reading_sessions.py  a5158d4bceab_add_web_serial_tables.py  b4a0f0d8e6c1_normalize_genres.py  e4f0d0f4e7a1_add_book_rating_review_and_dnf.py
backend/app/: config.py  database.py  main.py
backend/app/koreader/: dedup.py  lua_parser.py  sdr_importer.py  sdr_reader.py  stats_db_importer.py  stats_db_reader.py
backend/scripts/: import_booklore.py
backend/tests/: conftest.py  test_authors.py  test_books.py  test_bulk_books.py  test_config.py  test_data_mgmt.py  test_database.py  test_dedup.py  test_embed.py  test_epub_builder.py  test_genres.py  test_import.py  test_import_api.py  test_kosync.py  test_lenses.py  test_lua_parser.py  test_manual_books.py  test_metadata.py  test_models.py  test_organizer.py  test_reading.py  test_scrapers.py  test_sdr.py  test_serial_service.py  test_series.py  test_shelves.py  test_stats_api.py  test_stats_db.py  test_tags.py
tests/: conftest.py  (+18 more)
(+185 files in other folders)
